<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    
	<string name="title_activity_image_display">Full Image</string>
	<string name="title_edit_search_settings">Edit Search Settings</string>
    
    <string name="action_settings">Settings</string>
    <string name="btn_Search">Search</string>
    <string name="etQueryHint">Enter Search Query</string>
        
    <string name="tvImageSize">Image Size</string>
    <string name="tvColorFilter">Color Filter</string>
    <string name="tvSiteFilter">Site Filter</string>
    <string name="tvImageType">Image Type</string>
    <string name="tvSettingsLabel">Advanced Search Options</string>
    <string-array name="image_sizes">
        <item></item>
        <item>icon</item>
		<item>small</item>
        <item>medium</item>
		<item>large</item>
		<item>xlarge</item>
        <item>xxlarge</item>
		<item>huge</item>        
    </string-array>
	<string-array name="image_colors">	    
		<item></item>	    
        <item>black</item>
		<item>blue</item>
        <item>brown</item>
		<item>gray</item>
		<item>green</item>
        <item>orange</item>
		<item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
		<item>white</item>
		<item>yellow</item>        
    </string-array>    
	<string-array name="image_types">	    
	    <item></item>
        <item>face</item>
		<item>photo</item>
        <item>clipart</item>
		<item>lineart</item>		        
    </string-array>
		<string name="btn_save">Save</string>            
</resources>
